--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
     "react-loading-skeleton": "^3.3.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
