--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@prisma/client": "^4.15.0",
     "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.4",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
@@ -34,6 +38,8 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/nprogress": "^0.2.0",
     "prisma": "^4.15.0"
   }
