--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "jose": "^4.14.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.4",
     "normalize.css": "^8.0.1",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nprogress": "^0.2.0",
     "prisma": "^4.15.0"
