--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
