--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "build": "prisma generate && next build"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -36,6 +38,7 @@
     "react-icons": "^4.9.0",
     "react-loading-skeleton": "^3.3.1",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
