--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "build": "prisma generate && next build"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -41,7 +40,6 @@
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -49,6 +47,7 @@
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nprogress": "^0.2.0",
-    "prisma": "^4.15.0"
+    "prisma": "^4.15.0",
+    "typescript": "^5.2.0-dev.20230606"
   }
 }
