--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
+    "typescript": "^5.2.0-dev.20230606",
     "zod": "^3.21.4"
   },
   "devDependencies": {
